# MasterControlProgram

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: config.toml
examples/roles/: local_coder.toml
examples/tools/: edit-file.json  list-files.json  read-file.json  run-command.json  write-file.json
src/: lib.rs  main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/logging/: mod.rs
src/persistence/: mod.rs
src/provider/: anthropic.rs  bedrock.rs  huggingface.rs  mod.rs  nvidia_nim.rs  ollama.rs  openai.rs
src/role/: mod.rs
src/server/: mod.rs
src/tool/: mod.rs
src/workflow/: mod.rs
tests/: integration_nvidia_nim.rs  integration_ollama_cloud.rs  test_tools_and_roles.rs  unit_tests.rs
