[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
description = "Master Control Program – CLI-first agent-orchestration system"
license = "MIT"

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (provider calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"

# AWS SDK for Bedrock
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
